cabal-version:      2.4
name:               json-config
version:            0.1.0.0

library
    exposed-modules:
      JsonConfig
    other-modules:
      JsonConfig.Constants,
      JsonConfig.Internal
    build-depends:
      aeson,
      attoparsec,
      base < 5.0,
      bytestring,
      containers,
      glabrous,
      lens,
      text
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings,
        ScopedTypeVariables

