cabal-version:      3.4
name:               json-config
version:            0.1.0.0

library
    exposed-modules:
      JsonConfig
    other-modules:
      JsonConfig.Constants,
      JsonConfig.Internal
    build-depends:
      aeson,
      attoparsec,
      attoparsec-aeson,
      base < 5.0,
      bytestring,
      containers,
      glabrous,
      lens,
      text
    hs-source-dirs:   lib
    ghc-options:
        -Wall
        -O2
        -threaded
    default-language: GHC2021
    default-extensions:
        OverloadedStrings,

